--- a/e2e-tests/docker-compose.yml
+++ b/e2e-tests/docker-compose.yml
@@ -11,6 +11,9 @@ services:
   sender:
     image: mini-mailgun/bundle
     entrypoint: ./sender.py
+    environment:
+      SMTP_PORT: 5000
+      STATIC_MX_CONFIG: a.com:smtp-a,b.com:smtp-b
     volumes:
       - '.:/mailq'
 
