--- a/e2e-tests/docker-compose.yml
+++ b/e2e-tests/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     image: mini-mailgun/bundle
     entrypoint: ./sender.py
     environment:
+      RETRY_INTERVAL: 5
       SMTP_PORT: 5000
       STATIC_MX_CONFIG: a.com:smtp-a,b.com:smtp-b
     volumes:
