--- a/e2e-tests/docker-compose.yml
+++ b/e2e-tests/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       RETRY_INTERVAL: 3
       SHARD: 1/2
       SMTP_PORT: 5000
-      STATIC_MX_CONFIG: a.com:smtp-a,b.com:smtp-b
+      STATIC_MX_CONFIG: a.com:smtp-a;b.com:smtp-b;ab.com:localhost,smtp-a
     volumes:
       - '.:/mailq'
 
@@ -36,7 +36,7 @@ services:
       RETRY_INTERVAL: 3
       SHARD: 2/2
       SMTP_PORT: 5000
-      STATIC_MX_CONFIG: a.com:smtp-a,b.com:smtp-b
+      STATIC_MX_CONFIG: a.com:smtp-a;b.com:smtp-b;ab.com:localhost,smtp-a
     volumes:
       - '.:/mailq'
 
